ATO-NONE: Tidy code (orchestration-shared)
- Address minor SonarLint issues